<resources>
    <string name="app_name">Intents Challenge</string>
    <string name="contacts_app">Contacts App</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="website">FULL Website Address</string>
    <string name="address">Home Address</string>
    <string name="todo">TODO</string>
    <string name="smile">smile</string>
    <string name="create_contact">Create Contact</string>
</resources>
