<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ContactInfo">

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="10-Digit Phone Number"
        android:inputType="phone" />

    <EditText
        android:id="@+id/etWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/website"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/tvChoose"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="Choose Icon:" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivSad"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="0dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:clickable="true"
            app:srcCompat="@drawable/sad" />

        <ImageView
            android:id="@+id/ivNeutral"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="0dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/neutral" />

        <ImageView
            android:id="@+id/ivSmiley"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_margin="0dp"
            android:layout_marginRight="20dp"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/smile"
            app:srcCompat="@drawable/smiley" />
    </LinearLayout>

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimary"
        android:text="@string/create_contact"
        android:textColor="#FFFFFF" />
</LinearLayout>